--- a/src/containers/lucky_rotation/css/style.css
+++ b/src/containers/lucky_rotation/css/style.css
@@ -11,7 +11,7 @@ font-style:normal;
 }
 * {font-family: 'mijasultra' !important;}
 html {scroll-behavior: smooth;}
-.page1 {background-image:url(../images/bg1.png);  background-position: center; background-repeat: no-repeat;}
+.page1 {background-image:url(../images/bg1.png);  background-position: top center; background-repeat: no-repeat;}
 .content-inner-p1 {height: 1100px; width: 100%; position: relative; background-image:url(../images/bg1a.png) ; background-position: center 270px; background-repeat: no-repeat; overflow: hidden}
 .logo-p1 {text-align: center; padding-top: -20px; display: block; position: relative; overflow: auto;}
 .timer-p1 {width: 300px; margin-right: 0}
@@ -62,7 +62,7 @@ html {scroll-behavior: smooth;}
 .card {border: none !important; background-color: transparent;}
 .tbl-bvd {width: 901px; height: 160px;}
 .bg-ketquaquayso {background-image:url(../images/bg-hopqua.png); background-size: 95%;  background-position: top center; background-repeat: no-repeat; width: 100%; height: 660px; vertical-align:middle}
-.text-kqqs {padding-top: 100px;}
+.text-kqqs {padding-top: 100px;color:#fff;}
 .mstt h2 {position: absolute; top: 40%; transform: translateY(-40%); width: 70%}
 .title-bvd {font-size: 26px; color:#282652}
 .top-12 {background-image:url(../images/bg-bangvinhdanh.png); background-position: center; background-repeat: no-repeat;}
@@ -113,6 +113,11 @@ a.btn-dv:hover {color: #ffd102;}
 	padding-left: 0px !important;
 	padding-right: 0px !important;
 }
+.text-red {color: #b20000 !important}
+
+.nav-pills .nav-link.active {background-color: #efefef !important; color: #b20000}
+.top-0 {top: 0;}
+.left-0 {left: 0;}
 .glow {
   -webkit-animation: glow 1s ease-in-out infinite alternate;
   -moz-animation: glow 1s ease-in-out infinite alternate;
@@ -162,6 +167,20 @@ a.btn-dv:hover {color: #ffd102;}
 
 }
 
+@media (max-width: 900px) {
+	.content-inner-p1 {background-position: center bottom; height: 1100px; background-size: 150%;}
+	.btn-thamgiangay {position: absolute; bottom: 150px; width: 150px;}
+	.position-absolute-p1 {top: 20%; left: 1%;}
+	.btn-logout {position: absolute; top: 5%; right: 3%;}
+	.content-inner-p2 {background: none}
+	.logo-p2 {top: 0; left: 0; width: 60%;}
+	.page2 {background-position: 35% 10%; background-size: 160%;}
+	.vqmm {position: absolute; top: 17%; left: 13%; width: 600px;}
+	.menu-right {bottom: 50%;}
+	.btn-quay { bottom: 15%; left: 35%;}
+	.text-kqqs {padding-top: 80px;}
+}
+
 @media (max-width: 800px) {
 	.content-inner-p1 {background-position: center bottom; height: 1100px; background-size: 150%;}
 	.btn-thamgiangay {position: absolute; bottom: 150px; width: 150px;}
@@ -170,10 +189,15 @@ a.btn-dv:hover {color: #ffd102;}
 	.content-inner-p2 {background: none}
 	.logo-p2 {top: 0; left: 0; width: 60%;}
 	.page2 {background-position: 35% 10%; background-size: 160%;}
-	.vqmm {position: absolute; top: 16%; left: 15%; width: 600px;}
+	.vqmm {position: absolute; top: 15%; left: 16%; width: 560px;}
 	.menu-right {bottom: 50%;}
-	.btn-quay {bottom: 20%; right: 0;}
-	.text-kqqs {padding-top: 60px;}
+	.btn-quay { bottom: 15%; left: 35%;}
+	.text-kqqs {padding-top: 0; color:#fff;}
+	.bg-ketquaquayso {background: none; height: auto;}
+	.bg-title-mdt {background:url(../images/btn-ketquaquayso.png) center no-repeat; background-size: 100%; width: 300px; height: 93px; font-size: 36px; line-height: 93px; overflow:hidden; margin: 0 auto;}
+	.bg-ketquaquayso h4.text-white {color:#333 !important;}
+	.bg-img-giaithuong {background:url(../images/bg-giaidacbiet.png) center no-repeat; background-size: 100%; margin: 0 auto; padding: 40px 10px}
+	.mstt h2 {position: relative; margin: 0 auto;}
 }
 @media (max-width: 640px) {
 	
@@ -204,9 +228,9 @@ a.btn-dv:hover {color: #ffd102;}
 	.timer-p1 img.img-fluid {width: 100%;}
 	.logo-p2 {top: 4%;}
 	.page2 {background-position: 35% 10%; background-size: 160%;}
-	.vqmm {position: absolute; top: 15%; left: 10%; width: 320px}
-	.bg-ketquaquayso {height: 480px;}
-	.text-kqqs {padding-top: 35px;}
+	.vqmm {position: absolute; top: 15%; left: 19%; width: 400px}
+	/* .bg-ketquaquayso {height: 480px;} */
+	.text-kqqs {padding-top: 0px;}
 }
 @media (max-width: 480px) {
 	.content-inner-p1 {background-position: center bottom; height: 660px; background-size: 150%;}
@@ -221,7 +245,7 @@ a.btn-dv:hover {color: #ffd102;}
 	.btn-logout h5 {width: 80px; margin: 0 auto; display: block}
 	.btn-logout h5 a {line-height: 28px; font-size:14px}	
 	.logo-p2 {top: 0; left: 12%; width: 260px;}
-	.vqmm {position: absolute; top: 15%; left: 17.5%; width: 320px}
+	.vqmm {position: absolute; top: 15%; left: 18%; width: 300px}
 	.page2 {background-position: 35% 10%; background-size: 160%;}
 	.btn-quay {width:140px; bottom: 2%; left: 28%;}
 	.btn-quay .custom-control {font-size: 14px; padding-top: 8px; line-height: 30px}
@@ -236,12 +260,13 @@ a.btn-dv:hover {color: #ffd102;}
 	.btn-ketqua img {margin:17px 0 0 10px ;float: left; width: 40px}
 	.container.jumbotron {margin-top:0;}
 	#myModal4 .close {position: absolute; top: 7%; right: 7%; opacity: 1; z-index: 99;}
-	 .mstt {width: 75%;}
-	 .bg-ketquaquayso {height: 250px;}
+	.text-popup-phanthuong {font-size: 11px}
+	 /* .mstt {width: 75%;} */
+	 /* .bg-ketquaquayso {height: 250px;} */
 }
 @media (max-width: 380px) {
 	.content-inner-p1 {background-position: center bottom; height: 620px; background-size: 160%;}
-	.vqmm {position: absolute; top: 16%; left: 15%; width: 320px}
+	.vqmm {position: absolute; top: 15%; left: 18%; width: 300px}
 	.page2 {background-position: 35% 10%; background-size: 180%;}
 	.content-inner-p2 {height: 600px;}
 	.logo-p2 {top: 0; left: 10%; width: 250px;}
@@ -254,15 +279,15 @@ a.btn-dv:hover {color: #ffd102;}
 	.logo-p2 {top: 0; left: 10%; width: 220px;}
 }
 @media (max-width: 320px) {
-	.vqmm {position: absolute; top: 10%; left: 10%; width: 300px}
+	.vqmm {position: absolute; top: 10%; left: 15%; width: 250px}
 	.page1, .page2 {padding: 0;}
 	.content-inner-p1 {background-position: center bottom; height: 560px; background-size: 160%;}
 	.page2 {background-position: 40% 0; background-size: 160%;}
 	.logo-p2 {top: 0; left: 15%; width: 200px;}
 	.content-inner-p2 {height: 500px;}
 	.bg-ketquaquayso .row .col-6 .pt-4 {padding-top: .5rem !important}
-	.bg-ketquaquayso {height: 200px;}
-	.text-kqqs {padding-top: 30px;}
+	/* .bg-ketquaquayso {height: 200px;} */
+	/* .text-kqqs {padding-top: 30px;} */
 }
 
 #button {
